# cli-search

./: README.md  pyproject.toml  windsurfrules.toml
cli_search/: main.py
