[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cli-search"
version = "0.1.0"
description = "A simple CLI search bot"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "argparse>=1.4.0",
    "beautifulsoup4>=4.12.2",
    "openai>=1.3.0",
]

[project.scripts]
answer = "cli_search.main:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
