[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cli-search"
version = "0.1.0"
description = "A simple CLI search bot"
requires-python = ">=3.13"
dependencies = [
    "llama-index>=0.10.0",
    "llama-index-readers-web>=0.1.0",
    "llama-index-llms-openai>=0.1.0",
    "openai>=1.3.0",
    "argparse>=1.4.0",
]

[project.scripts]
answer = "cli_search.main:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
